Login page (part 1). Header, footer

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,4 +1,11 @@
 .header {
+  padding-top: 25px;
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   &__logo {
     display: flex;
