--- a/app/src/scss/reset.scss
+++ b/app/src/scss/reset.scss
@@ -1,6 +1,12 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
+  background-color: $background-primary;
+  height: 100%;
 }
 
 h1,
@@ -13,6 +19,10 @@ p {
   margin: 0;
 }
 
+p {
+  font-size: 22px;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -20,4 +30,13 @@ ul {
 
 .debug {
   color: #969692;
+}
+
+a {
+  color: $primary-color;
+  text-decoration: underline;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
