--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -4,8 +4,12 @@
 
 @import "../layouts/default.scss";
 
+@import "../pages/Profile/index.scss";
+
 @import "../components/not-found/not-found.scss";
 @import "../components/login/login.scss";
+@import "../components/profile/profile.scss";
+@import "../components/input/input.scss";
 @import "../components/google-button/google-button.scss";
 @import "../components/footer/footer.scss";
 @import "../components/container/container.scss";
