--- a/app/components/login/login.scss
+++ b/app/components/login/login.scss
@@ -1,4 +1,17 @@
 .login {
   color: white;
   text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  &__title {
+    margin-bottom: 40px;
+  }
+
+  &__description {
+    margin-bottom: 50px;
+    max-width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
