Hero. Profile (finish). Not found page

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -30,4 +30,19 @@
       }
     }
   }
+
+  &__logo {
+    position: relative;
+  }
+
+  &__logo-appendix {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    svg {
+      width: 120px;
+      display: block;
+    }
+  }
 }
