--- a/app/components/profile/profile.scss
+++ b/app/components/profile/profile.scss
@@ -36,7 +36,7 @@
   }
 
   &__input-column {
-    max-width: 350px;
-    padding-right: 150px;
+    width: 500px;
+    padding-right: 100px;
   }
 }
