--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -8,6 +8,7 @@
 
 @import "../components/not-found/not-found.scss";
 @import "../components/login/login.scss";
+@import "../components/message/message.scss";
 @import "../components/profile/profile.scss";
 @import "../components/input/input.scss";
 @import "../components/google-button/google-button.scss";
