--- a/app/components/hero/hero.scss
+++ b/app/components/hero/hero.scss
@@ -1,3 +1,27 @@
 .hero {
+    color: white;
+    padding-top: 120px;
+    padding-bottom: 120px;
   
+    &__body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    &__title {
+        font-size: 80px;
+        max-width: 600px;
+        margin-bottom: 40px;
+    }
+
+    &__description {
+        font-size: 30px;
+        max-width: 740px;
+    }
+
+    &__button {
+        padding-top: 40px;
+    }
 }
