Main page. Finish

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -8,6 +8,8 @@
 
 @import "../components/not-found/not-found.scss";
 @import "../components/login/login.scss";
+@import "../components/faq/faq.scss";
+@import "../components/lesson-card/lesson-card.scss";
 @import "../components/popular/popular.scss";
 @import "../components/message/message.scss";
 @import "../components/profile/profile.scss";
