--- a/app/components/popular/popular.scss
+++ b/app/components/popular/popular.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 50px;
   }
 
   &__title {
@@ -15,5 +16,17 @@
 
   &__link {
     font-size: 20px;
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__list-item {
+    padding-right: 50px;
+    padding-bottom: 50px;
+    width: 300px;
+    max-width: 100%;
   }
 }
