Likes page. All lessons page

--- a/app/components/button/button.scss
+++ b/app/components/button/button.scss
@@ -29,6 +29,11 @@
         background-color: transparent;
         color: white;
       }
+
+      &.is-active {
+        border-color: white;
+        color: white;
+      }
     }
   }
 }
