--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -5,10 +5,13 @@
 @import "../layouts/default.scss";
 
 @import "../pages/Profile/index.scss";
+@import "../pages/Lessons/index.scss";
+@import "../pages/Likes/index.scss";
 
 @import "../components/not-found/not-found.scss";
 @import "../components/login/login.scss";
 @import "../components/faq/faq.scss";
+@import "../components/cards/cards.scss";
 @import "../components/lesson-card/lesson-card.scss";
 @import "../components/popular/popular.scss";
 @import "../components/message/message.scss";
