--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -8,6 +8,7 @@
 @import "../pages/Lessons/index.scss";
 @import "../pages/Lessons/view.scss";
 @import "../pages/Likes/index.scss";
+@import "../pages/Functionality/index.scss";
 
 @import "../components/not-found/not-found.scss";
 @import "../components/login/login.scss";
@@ -17,6 +18,7 @@
 @import "../components/lesson-card/lesson-card.scss";
 @import "../components/popular/popular.scss";
 @import "../components/message/message.scss";
+@import "../components/content/content.scss";
 @import "../components/profile/profile.scss";
 @import "../components/input/input.scss";
 @import "../components/google-button/google-button.scss";
