--- a/app/pages/Lessons/view.scss
+++ b/app/pages/Lessons/view.scss
@@ -26,4 +26,23 @@
     &__back-button {
         margin-right: 50px;
     }
+
+    &__empty-content-text {
+        color: white;
+        text-align: center;
+        padding-top: 100px;
+    }
+
+    &__scroll-bottom {
+        display: flex;
+        align-items: center;
+        color: white;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+        p {
+            max-width: 800px;
+            margin-left: 30px;
+        }
+    }
 }
