--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,23 +1,92 @@
 .header {
   padding-top: 25px;
 
+  &.is-active {
+    @include media(tablet) {
+      .header__navigation {
+        transform: translateX(-100%);
+      }
+  
+      .header__burger {
+        position: fixed;
+        top: 29px;
+        right: 20px;
+        z-index: 50;
+      }
+    }
+  }
+
   &__inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
-  &__nav-list {
-    list-style: none;
+  &__navigation {
     display: flex;
-    font-size: 22px;
     flex-grow: 1;
     justify-content: flex-end;
     padding-right: 50px;
 
+    @include media(tablet) {
+      position: fixed;
+      background-color: $background-primary;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 100%;
+      padding: 0;
+      z-index: 20;
+      justify-content: unset;
+      overflow-y: auto;
+      margin-right: -100%;
+    }
+  }
+
+  &__navigation-inner {
+    @include media(tablet) {
+      display: flex;
+      height: 100%;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  &__nav-list {
+    display: flex;
+    list-style: none;
+    font-size: 22px;
+
+    @include media(tablet) {
+      flex-direction: column;
+      align-items: center;
+    }
+    
     li {
       padding: 0 30px;
+      text-align: center;
+
+      @include media(tablet) {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0;
+      }
     }
+  }
+
+  &__logo-mobile {
+    display: none;
+
+    @include media(tablet) {
+      display: block;
+      margin-bottom: 30px;
+    }
+  }
+
+  &__primary-button {
+    margin-left: auto;
   }
 
   &__nav-item {
@@ -76,6 +145,20 @@
     svg {
       width: 120px;
       display: block;
+    }
+  }
+
+  &__burger {
+    display: none;
+
+    @include media(tablet) {
+      display: block;
+      margin-left: 50px;
+    }
+
+    @include media(mobile) {
+      padding-right: 0;
+      margin-left: 30px;
     }
   }
 }
