--- a/app/pages/Lessons/view.scss
+++ b/app/pages/Lessons/view.scss
@@ -41,9 +41,18 @@
         padding-top: 50px;
         padding-bottom: 50px;
 
+        @include media(mobile) {
+            flex-direction: column;
+        }
+
         p {
             max-width: 800px;
             margin-left: 30px;
+
+            @include media(mobile) {
+                margin-left: 0;
+                margin-top: 20px;
+            }
         }
     }
 
