--- a/app/components/lesson-card/lesson-card.scss
+++ b/app/components/lesson-card/lesson-card.scss
@@ -4,8 +4,9 @@
         border: 1px solid $primary-color;
         position: relative;
         display: block;
-        background-size: 101%;
+        background-size: cover;
         background-position: center;
+        background-repeat: no-repeat;
 
         &:hover {
             border-color: white;
